--- a/monsters/depths/index.html
+++ b/monsters/depths/index.html
@@ -114,60 +114,71 @@
              
 <h1>下界深淵</h1>
 <h3 class="MonsterName">底棲魔魚 (Aboleth)	<span class="Tags">集團, 巨型, 聰穎</span></h3>
-<p class="MonsterStats">Tentacle (d10+3 傷害), 18 HP, 0 護甲</p>
+<p class="MonsterStats">觸手 (d10+3 傷害), 18 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Telepathy</p>
-<p class="MonsterDescription">Deep below the surface of the world, in freshwater seas untouched by the sun, dwell the aboleth. Fish the size of whales, with strange growths of gelatinous feelers used to probe the lightless shores. They’re served by slaves: blind albino victims of any race unfortunate enough to stumble on them, drained of thought and life by the powers of the aboleth’s alien mind. In the depths they plot against each other, fishy cultists building and digging upward towards the surface until someday, they’ll breach it. For now, they sleep and dream and guide their pallid minions to do their bidding. <em>本能</em>: To command</p>
-<ul><li>Invade a mind</li>
-<li>Turn minions on them</li>
-<li>Put a plan in motion</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 心靈感應</p>
+<p class="MonsterDescription">
+	在世界表面的深處，在那陽光照射不到的淡水湖中，底棲魔魚潛居著。身形大如巨鯨，長著用以探索無光海岸的怪異膠狀觸鬚。牠們被眾多奴隸所服侍：這些來自各個種族，不幸遭遇底棲魔魚的盲眼白化症受害者，他們的思想與生命全都已被牠那異怪心靈的力量給榨取殆盡。在深淵之底，牠們謀劃著對付彼此，而那些散發著魚腥味的邪教徒也正一步步建築，向著地表向上挖掘；直到某一天，他們終將挖穿那最後的阻隔。但至少現在……牠們沉睡、發夢、並引領牠們蒼白的奴僕遵行牠們的命令。 <em>本能</em>: 命令</p>
+<ul>
+	<li>入侵思想</li>
+	<li>讓爪牙們襲擊他們</li>
+	<li>讓計畫付諸實行</li></ul>
 
 <h3 class="MonsterName">啟示錄巨龍 (Apocalypse Dragon)	<span class="Tags">單獨, 巨型, 魔法, 神聖</span></h3>
-<p class="MonsterStats">Bite (高[2d12]+9 傷害, 4 穿透), 26 HP, 5 護甲</p>
+<p class="MonsterStats">噬咬 (高[2d12]+9 傷害, 4 穿透), 26 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 強力, 毀亂</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Inch-thick metal hide, Supernatural knowledge, Wings</p>
-<p class="MonsterDescription">The end of all things shall be a burning—of tree and earth and of the air itself. It shall come upon the plains and mountains not from beyond this world but from within it. Birthed from the womb of deepest earth shall come the Dragon that Will End the World. In its passing all will become ash and bile and the Dungeon World a dying thing will drift through planar space devoid of life. They say to worship the Apocalypse Dragon is to invite madness. They say to love it is to know oblivion. The awakening is coming. <em>本能</em>: To end the world</p>
+<p class="MonsterQualities"><strong>特性:</strong> 吋厚的金屬皮革, 超自然知識, 翅膀</p>
+<p class="MonsterDescription">The end of all things shall be a burning—of tree and earth and of the air itself. It shall come upon the plains and mountains not from beyond this world but from within it. Birthed from the womb of deepest earth shall come the Dragon that Will End the World. In its passing all will become ash and bile and the Dungeon World a dying thing will drift through planar space devoid of life. They say to worship the Apocalypse Dragon is to invite madness. They say to love it is to know oblivion. The awakening is coming. <em>本能</em>: 終結世界</p>
 <ul><li>Set a disaster in motion</li>
 <li>Breathe forth the elements</li>
 <li>Act with perfect foresight</li></ul>
 
 <h3 class="MonsterName">混沌眷族 (Chaos Spawn)	<span class="Tags">單獨, 不定型</span></h3>
-<p class="MonsterStats">Chaotic touch (d10 傷害), 19 HP, 1 護甲</p>
+<p class="MonsterStats">混亂之觸 (d10 傷害), 19 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Chaos form</p>
-<p class="MonsterDescription">Driven from the city, a cultist finds sanctuary in towns and villages. Discovered there, he flees to the hills and scratches his devotion on the cave walls. Found out again, he is chased with knife and torch into the depths, crawling deeper and deeper until, in the deepest places, he loses his way. First, he forgets his name. Then he forgets his shape. His chaos gods, most beloved, bless him with a new one. <em>本能</em>: To undermine the established order</p>
-<ul><li>Rewrite reality</li>
-<li>Unleash chaos from containment</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 混沌型態</p>
+<p class="MonsterDescription">被從城市驅趕出來，一名邪教徒在城鎮和村落中找到了避難所。然後，在東窗事發後，他逃進山中並將他的虔誠奉獻刻劃在洞壁上。再一次被發現，他在刀刃和火炬的追逐下進入了深淵，越爬越深，越爬越深……直到在那最深之地，他迷失了自己。首先，他遺忘了自己的名字，接著，他遺忘了自己的形貌。他最鍾愛的混沌諸神，賜予了他一個全新的身分。 <em>本能</em>: 顛覆既有的秩序</p>
+<ul>
+	<li>重構現實</li>
+	<li>從遏制中釋放混亂</li></ul>
 
 <h3 class="MonsterName">甲伏怪 (Chuul)	<span class="Tags">集團, 大型, 謹慎</span></h3>
-<p class="MonsterStats">Claws (d8+1 傷害, 3 穿透), 10 HP, 4 護甲</p>
+<p class="MonsterStats">鉗爪 (d8+1 傷害, 3 穿透), 10 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 毀亂</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious</p>
-<p class="MonsterDescription">Your worst seafood nightmare come to life. A vicious sort of half-man half-crawdad, cursed with primal intelligence and blessed with a pair of razor-sharp claws. Strange things lurk in the stinking pools in caverns best forgotten and the chuul is one of them. If you spot one, your best hope is a heavy mace to crack its shell and maybe a little garlic butter. Mmmm. <em>本能</em>: To split</p>
-<ul><li>Split something in two with mighty claws</li>
-<li>Retreat into water</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
+<p class="MonsterDescription">
+	你最可怕的海鮮惡夢活了過來。某種半人半龍蝦的邪惡生物，受到原始智能所詛咒，並擁有一對鋒利如剃刀的鉗爪。眾多怪異潛伏在最好被遺忘的岩窟臭水中，而甲伏怪正是其中之一。如果你看到了牠們之一，你最好的期待就是用重錘狠狠敲開牠的硬殼，也許再抹上一點蒜香奶油？呣呣呣…… <em>本能</em>: 劈開</p>
+<ul>
+	<li>使用強力的鉗爪將某物劈成兩半</li>
+	<li>撤退回水中</li></ul>
 
 <h3 class="MonsterName">黑暗精靈刺客 (Deep Elf Assassin)	<span class="Tags">集團, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Poisoned blade (d8 傷害, 1 穿透), 6 HP, 1 護甲</p>
+<p class="MonsterStats">劇毒刀刃 (d8 傷害, 1 穿透), 6 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">It was not so simple a thing as a war over religion or territory. No disagreement of queens led to the great sundering of the elves. It was sadness. It was the very diminishing of the world by the lesser races. The glory of all the elves had built was cracking and turning to glass. Some, then, chose to separate themselves from the world; wracked with tears they turned their backs on men and dwarves. There were others, though, that were overcome with something new. A feeling no elf had felt before. Spite. Hatred filled these elves and twisted them and they turned on their weaker cousins. Some still remain after the great exodus below. Some hide amongst us with spider-poisoned blades, meting out that strangest of punishments: elven vengeance. <em>本能</em>: To spite the surface races</p>
-<ul><li>Poison them</li>
-<li>Unleash an ancient spell</li>
-<li>Call reinforcements</li></ul>
+<p class="MonsterDescription">
+	這件事可不像宗教或領土戰爭那麼單純。女王之間的不和導致了精靈族史上最大的分裂。這是何等悲傷，少數種族建立起的世界迎來了最嚴重的一次衰退，所有精靈曾經建立的榮耀都被粉碎成塵。在這之後，他們有些選擇與這個世界脫節；他們背離了人類與矮人，終日淚流滿面。但也有些人被某種新的東西所征服：一種精靈們從未感受過的情緒：怨恨。仇恨充滿了這些精靈的心，扭曲了他們，並讓他們轉向攻擊他們那些弱小的表親。他們有些在大遷徙之後仍然留在地底，而有些則潛藏在我們之中，帶著蜘蛛毒刃，降下那最為怪異詭譎的懲罰：精靈族的復仇。 <em>本能</em>: 惡意對待地表種族</p>
+<ul>
+	<li>使他們中毒</li>
+	<li>釋放遠古法術</li>
+	<li>呼叫增援</li></ul>
 <h3 class="MonsterName">黑暗精靈劍術大師 (Deep Elf Swordmaster)	<span class="Tags">集團, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Barbed blade (高[2d8]+2 傷害, 1 穿透), 6 HP, 2 護甲</p>
+<p class="MonsterStats">棘刺刀刃 (高[2d8]+2 傷害, 1 穿透), 6 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">The deep elves lost the sweetness and gentle peace of their bright cousins ages ago, but they did not abandon grace. They move with a swiftness and beauty that would bring a tear to any warrior’s eye. In the dark, they’ve practiced. A cruelty has infested their swordsmanship—a wickedness comes to the fore. Barbed blades and whips replace the shining pennant-spears of elven battles on the surface. The swordmasters of the deep elf clans do not merely seek to kill, but to punish with every stroke of their blades. Wickedness and pain are their currency. <em>本能</em>: To punish unbelievers</p>
-<ul><li>Inflict pain beyond measure</li>
-<li>Use the dark to advantage</li></ul>
+<p class="MonsterDescription">
+	黑暗精靈們從很久以前就已經失去了他們光明的表親所擁有那甜美、溫柔的和平，但他們並沒有捨棄掉優雅。他們那迅捷而優美的動作足以使任何戰士流淚。在黑暗中的技藝，他們早已鍛鍊純熟。殘酷侵染了他們精湛的劍術──惡毒滿溢而出。帶有棘刺的刀刃和鞭子取代了地表精靈們在戰鬥中所使用的閃亮旌旗長矛。黑暗精靈氏族的劍術大師追求的不僅僅是殺戮，而是用他們的每一刀、每一劍施予懲罰。邪惡與痛苦就是他們的貨幣。 <em>本能</em>: 懲罰不信者</p>
+<ul>
+	<li>造成難以估量的痛苦</li>
+	<li>利用黑暗的優勢</li></ul>
 <h3 class="MonsterName">黑暗精靈祭司 (Deep Elf Priest)	<span class="Tags">單獨, 神聖, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Smite (d10+2 傷害), 14 HP, 0 護甲</p>
+<p class="MonsterStats">重擊 (d10+2 傷害), 14 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Divine connection</p>
-<p class="MonsterDescription">The spirits of the trees and the lady sunlight are far, far from home in the depths where the deep elves dwell. New gods were found there, waiting for their children to come home. Gods of the spiders, the fungal forests, and things that whisper in the forbidden caves. The deep elves, ever attuned to the world around them, listened with hateful intent to their new gods and found a new source of power. Hate calls to hate and grim alliances were made. Even among these spiteful ranks, piety finds a way to express itself. <em>本能</em>: To pass on divine vengeance</p>
-<ul><li>Weave spells of hatred and malice</li>
-<li>Rally the deep elves</li>
-<li>Pass on divine knowledge</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 神性聯繫</p>
+<p class="MonsterDescription">
+	對於黑暗精靈而言，林木和陽光女士的精魂距離他們位於地底深淵的家鄉實在太遠太遠。在那裡，新的神靈被發現，並等待著祂們的孩子回家：蜘蛛之神、菌林之神、以及那些在禁忌洞窟中喃喃低語的存在。總在調適他們周遭的世界，黑暗精靈懷著仇恨聆聽他們新神的聲音，並找到了一股嶄新的力量之源。仇恨呼喚仇恨，那殘忍邪惡的聯盟被締結。而即使在這充滿惡毒怨恨的行列中，虔誠仍找到了另一種表達自己的方式。 <em>本能</em>: 傳遞神性的復仇</p>
+<ul>
+	<li>編織仇恨和惡意的法術</li>
+	<li>召集黑暗精靈</li>
+	<li>傳授神性的知識</li></ul>
 <h3 class="MonsterName">龍 (Dragon)	<span class="Tags">單獨, 巨型, 駭人, 謹慎, 囤財者</span></h3>
 <p class="MonsterStats">噬咬 (高[2d12]+5 傷害, 4 穿透), 16 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 毀亂</span></p>
@@ -178,39 +189,47 @@
 	<li>要求貢禮</li>
 	<li>舉止輕蔑</li></ul>
 <h3 class="MonsterName">灰袋獸 (Gray Render)	<span class="Tags">單獨, 大型</span></h3>
-<p class="MonsterStats">Rending claws (d10+3 傷害, 3 穿透), 16 HP, 1 護甲</p>
+<p class="MonsterStats">撕裂利爪 (d10+3 傷害, 3 穿透), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
-<p class="MonsterDescription">On its own, the render is a force of utter destruction. Huge and leathery, with a maw of unbreakable teeth and claws to match, the render seems to enjoy little more than tearing things apart. Stone, flesh, or steel, it matters little. However, the gray render is so rarely found alone. They bond with other creatures. Some at birth, others as fully-grown creatures, and a gray render will follow their bonded master wherever they go, bringing them offerings of meat and protecting them while they sleep. Finding an un-bonded render means certain riches, if you survive to sell it. <em>本能</em>: To serve</p>
-<ul><li>Tear something apart</li></ul>
-<h3 class="MonsterName">火童 (Magmin)	<span class="Tags">成群, 聰穎, 組織, 囤財者</span></h3>
-<p class="MonsterStats">Flaming hammer (d6+2 傷害), 7 HP, 4 護甲</p>
+<p class="MonsterDescription">
+	單論其本身，灰袋獸是一股象徵著徹底破壞的可怕力量。高大而強韌，有著堅不可摧的尖牙和與之相匹的利爪，灰袋獸唯一的享受似乎就只是將牠眼前的一切撕成碎片：岩石也好、血肉也好、鋼鐵也好，都無關緊要。然而，灰袋獸鮮少會被單獨發現。牠們會和其他生物建立羈絆，無論剛出生還是已成年，灰袋獸都將緊隨著牠們的羈絆對象，為他們提供狩獵得來的鮮肉、並在熟睡時保護他們的安危。找到一頭尚未有羈絆對象的灰袋獸通常意味著一定的財富──前提是你有那個命把牠抓起來賣掉。 <em>本能</em>: 服侍</p>
+<ul>
+	<li>將某物撕成碎片</li></ul>
+<h3 class="MonsterName">火矮人 (Magmin)	<span class="Tags">成群, 聰穎, 組織, 囤財者</span></h3>
+<p class="MonsterStats">燃燒錘 (d6+2 傷害), 7 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Fiery blood</p>
-<p class="MonsterDescription">Dwarf-shaped and industrious, the magmin are among the deepest-dwellers of Dungeon World. Found in cities of brass and obsidian built nearest the molten core of the planet, the magmin live a life devoted to craft—especially that of fire and magical items related to it. Surly and strange, they do not often deign to speak to petitioners who appear at their gates, even those who have somehow found a way to survive the hellish heat. Even so, they respect little more than a finely made item and to learn to forge from a magmin craftsman means unlocking secrets unknown to surface blacksmiths. Like so much else, visiting the magmin is a game of risk and reward. <em>本能</em>: To craft</p>
-<ul><li>Offer a trade or deal</li>
-<li>Strike with fire or magic</li>
-<li>Provide just the right item, at a price</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 燃焰鮮血</p>
+<p class="MonsterDescription">
+	有著矮人的外貌和勤勉的態度，火矮人是位於地城世界最深層的居民之一。在那最靠近地球熔融核心的黃銅和黑曜岩城市之中，火矮人的一生專注投入於工藝製造──尤其是那些與火焰和魔法有關的魔法物品。乖戾暴躁且脾氣古怪，他們鮮少願意降低身分搭理出現在他們大門前的上訪者，即使是那些已經設法從地獄高熱中倖存下來的人們也一樣。他們會給予尊重的對象不過是精雕細琢的工藝品，而儘管如此，若能向火矮人工匠學習鍛造的技術，也就意味著你將解開那些不為地表鐵匠所知的祕密。就如同許多其他事物一樣，探訪火矮人的旅程是一場高風險和回報的賭博。 <em>本能</em>: 製造</p>
+<ul>
+	<li>提供一筆交易或買賣</li>
+	<li>以烈火或魔法攻擊</li>
+	<li>提供恰到好處的商品，伴隨高價</li></ul>
 <h3 class="MonsterName">米諾陶 (Minotaur)	<span class="Tags">單獨, 大型</span></h3>
-<p class="MonsterStats">Axe (d10+1 傷害), 16 HP, 1 護甲</p>
+<p class="MonsterStats">斧頭 (d10+1 傷害), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Unerring sense of direction</p>
-<p class="MonsterDescription">“Head of a man, body of a bull. No, wait, I’ve got that backwards. It’s the bull’s head and the man’s body. Hooves sometimes? Is that right? I remember the old king said something about a maze? Blast! You know I can’t think under this kind of pressure. What was that? Oh gods, I think it’s coming…” <em>本能</em>: To contain</p>
-<ul><li>Confuse them</li>
-<li>Make them lost</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 精準無誤的方向感</p>
+<p class="MonsterDescription">「人類的頭，公牛的身體，不，等等，我弄反了，是公牛的頭和人類的身體。也許還長著蹄？是這樣嗎？我記得老國王好像說過什麼關於迷宮的事情？該死！你知道我沒辦法在這種壓力下好好思考。那是什麼？噢，老天，我想牠要來了……」 <em>本能</em>: 遏制</p>
+<ul>
+	<li>使他們困惑</li>
+	<li>讓他們迷失方向</li></ul>
 <h3 class="MonsterName">納迦 (Naga)	<span class="Tags">單獨, 聰穎, 組織, 囤財者, 魔法</span></h3>
-<p class="MonsterStats">Bite (d10 傷害), 12 HP, 2 護甲</p>
+<p class="MonsterStats">啃咬 (d10 傷害), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterDescription">Ambitious and territorial above nearly all else, the naga are very rarely found without a well-formed and insidious cult of followers. You’ll see it in many mountain towns—a snake sigil scrawled on a tavern wall or a local church burned to the ground. People going missing in the mines. Men and women wearing the mark of the serpent. At the core of it all lies a naga: an old race now fallen into obscurity, still preening with the head of a man over its coiled, serpent body. Variations of these creatures exist depending on their bloodline and original purpose, but they are all master manipulators and magical forces to be reckoned with. <em>本能</em>: To lead</p>
-<ul><li>Send a follower to their death</li>
-<li>Use old magic</li>
-<li>Offer a deal or bargain</li></ul>
+<p class="MonsterDescription">擁有著幾乎所有存在中最為強烈的野心和領土意識，你很難找到一頭納迦的身邊沒有一個組織完善且陰邪狡詐的追隨者教團。你能在許多山間城鎮中看到它們的蹤影──刻在酒館牆面或當地焚毀教堂遺跡地面的蛇形紋章、在礦坑中失蹤的人們、戴著神蛇面具的男男女女……這一切跡象背後的核心總是納迦：一個古老的種族，儘管今已墮落，那盤卷蛇身上接著的人類頭顱卻仍是那麼驕傲自負。取決於牠們的血脈以及最初存在的目的，這些生物之間存在著許多不同的變體，但牠們的共通點是，牠們全都是操縱人心的專家、也是一股絕不容小覷的魔法力量。 <em>本能</em>: 領導</p>
+<ul>
+	<li>派遣一名追隨者去送死</li>
+	<li>使用古老魔法</li>
+	<li>提供一筆交易或談判</li></ul>
 <h3 class="MonsterName">沙拉曼達 (Salamander)	<span class="Tags">成群, 大型, 聰穎, 組織, 異位面</span></h3>
-<p class="MonsterStats">Flaming spear (高[2d6]+3 傷害), 7 HP, 3 護甲</p>
+<p class="MonsterStats">燃燒長矛 (高[2d6]+3 傷害), 7 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 短程</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Burrowing</p>
-<p class="MonsterDescription">“The excavation uncovered what the reports called a basalt gate. Black stone carved with molten runes. When they dug it up, the magi declared it inert but further evidence indicates that was an incorrect claim. The entire team went missing. When we arrived, the gate was glowing. Its light filled the whole cavern. We could see from the entrance that the area had become full of these creatures—like men with red and orange skin, tall as an ogre but with a snake’s tail where their legs ought to be. They were clothed, too—some had black glass armor. They spoke to each other in a tongue that sounded like grease in a fire. I wanted to leave but the sergeant wouldn’t listen. You’ve already read what happened next, sir. I know I’m the only one that got back, but what I said is true. The gate is open, now. This is just the beginning!” <em>本能</em>: To consume in flame</p>
-<ul><li>Summon elemental fire</li>
-<li>Melt away deception</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
+<p class="MonsterDescription">
+	「開鑿作業挖掘出了報告中指稱的那道玄武岩大門。漆黑的岩體上雕琢著熔融的符文，當他們將它挖掘出來時，隨行的魔導師們表示它處於惰性狀態……但進一步的證據已經表示這是個錯誤的判斷。整個挖掘團隊都失蹤了。當我們抵達時，門扉正亮著，它的光芒充滿了整個洞窟。我們從入口可以看到這整個區域已經被這些生物所佔據──牠們看起來像人，但有著橘色和紅色的肌膚，和食人魔一樣高大，且原本應該長著雙腿的地方被一條長長的蛇尾給取代。牠們同樣穿著衣物──有些個體甚至披戴著漆黑玻璃製成的鎧甲。牠們與彼此說話的聲調聽起來彷彿烈火中的獸脂。我想要離開，但是中士並沒有聽進我的意見……相信您已經讀過接下來發生的事情了，長官。我知道我是唯一一個活著回來的人，但我說的都是真的。現在，那道大門已經開啟。這僅僅是個開始！」 <em>本能</em>: 在火焰中燃燒</p>
+<ul>
+	<li>召喚元素之火</li>
+	<li>熔化詭計</li></ul>
 
 
           </div>
