--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -117,19 +117,23 @@
 <p class="MonsterStats">烈焰寶劍 (b[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 羽翼</p>
-<p class="MonsterDescription">“So was it written that the heavens opened up to Avra’hal and did an angel from the clouds emerge to speak unto her and so did it appear to her as her firstborn daughter—beautiful, of ebon skin and golden eyes—and did Avra’hal weep to see it. ‘Be not afraid,’ it commanded her. ‘Go to the villages I have shown you in your dreams and unto them show the word I have written on your soul.’ Avra’hal wept and wept and did agree to do this and did take up her sword and tome and did into the villages go, a great thirst for blood on her lips for the word the angel wrote upon the soul of Avra’hal was ‘kill’.” <em>本能</em>: To share divine will</p>
-<ul><li>Deliver visions and prophecy</li>
-<li>Stir mortals to action</li>
-<li>Expose sin and injustice</li></ul>
+<p class="MonsterDescription">
+	「經上這麼記載：天開了，一位天使從雲中出現，用阿芙拉瓦爾第一個女兒的樣貌對她說話──她是如此美麗，烏木般的肌膚，和黃金般的眼眸──當看見，阿芙拉瓦爾就流淚哭泣。『不要懼怕』，天使命令她：『妳要去我在夢中向妳顯現的村莊，向他們展現我在妳靈魂中寫下的字句。』阿芙拉瓦爾就再次哭泣，答應了祂，她拿起了她的寶劍和經書，往村莊那裡去。她的嘴唇有對鮮血的渴望，因為天使在阿芙拉瓦爾的靈魂中寫下的字句是『殺戮』。」 <em>本能</em>: 分享神的旨意</p>
+<ul>
+	<li>傳達異象和預言</li>
+	<li>激發凡人們的行動</li>
+	<li>揭露罪惡與不公義</li></ul>
 <h3 class="MonsterName">猬魔 (Barbed Devil)	<span class="Tags">單獨, 大型, 異位面, 駭人</span></h3>
 <p class="MonsterStats">棘刺 (d10+3 傷害, 3 穿透), 16 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 毀亂</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 棘刺</p>
-<p class="MonsterDescription">There are a thousand forms of devil, maybe more. Some common and some unique. Each time the Inquisitors discover a new one they write it into the Tormentors Codex and the knowledge is shared among the abbeys in the hope that atrocities of that particular sort won’t find their way into the world again. The barbed devil has long been known to the brothers and sisters of the Inquisition. It appears only at a site of great violence or when called by a wayward summoner. Covered in sharp quills, this particular demon revels in the spilling of blood, preferably by impaling victims piecemeal or in whole upon its thorns and letting them die there. Cruel but not particularly effective beyond slaughter. A low inquisitorial priority. <em>本能</em>: To rend flesh and spill blood</p>
-<ul><li>Impale someone</li>
-<li>Kill indiscriminately</li></ul>
+<p class="MonsterDescription">
+	魔鬼的型態多達千種，或許更多。有些尋常可見、有些獨一無二。每當審判官們發現了新的品種，他們就會把牠寫進《折磨者法典》之中。這些知識只在修道院中彼此傳遞，並祈禱這類特殊的殘暴罪行不會再一次出現在這個世界上。其中，猬魔的存在早已被宗教審判庭的兄弟姐妹們知曉。牠只會現身在發生嚴重暴力事件的場所、或當被任性反覆的召喚者所呼喚時。渾身披覆著鋒利的棘刺，這種惡魔特別沉迷於讓鮮血噴濺，尤其偏好將受害者的屍塊一塊塊或整個刺穿在自己的尖針上，讓他們無助地死在那裡。儘管殘忍，但屠殺效率並不特別高。審判優先度低。 <em>本能</em>: 撕裂血肉並噴濺鮮血</p>
+<ul>
+	<li>刺穿某人</li>
+	<li>不加區別地殺戮</li></ul>
 <h3 class="MonsterName">鏈魔 (Chain Devil)	<span class="Tags">單獨, 異位面</span></h3>
-<p class="MonsterStats">Crush (d10 傷害, 無視護甲), 12 HP, 3 護甲</p>
+<p class="MonsterStats">碾碎 (d10 傷害, 無視護甲), 12 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterDescription">Do you think the phrase “drag him to hell” means nothing? It is unfortunately literal, in the case of the chain devil. Appearing differently to each victim, this summoned creature has but a single purpose: to wrap its victim up in binding coils and take it away to a place of torment. Sometimes it will come as a man-shaped mass of rusting iron, hooks and coils of mismatched links. Other times, a roiling tangle of rope or kelp or twisted bloody bedsheets. The results are always the same. <em>本能</em>: To capture</p>
 <ul><li>Take a captive</li>
