--- a/monsters/experiments/index.html
+++ b/monsters/experiments/index.html
@@ -151,7 +151,7 @@
 	<li>把某個東西給腐蝕掉</li>
 	<li>攝取養分</li></ul>
 <h3 class="MonsterName">靈竊怪 (Ethereal Filcher)	<span class="Tags">單獨, 狡猾, 異位面</span></h3>
-<p class="MonsterStats">偷來的匕首 (w[2d8] 傷害), 12 HP, 1 護甲</p>
+<p class="MonsterStats">偷來的匕首 (低[2d8] 傷害), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
 <p class="MonsterDescription">
