--- a/monsters/hordes/index.html
+++ b/monsters/hordes/index.html
@@ -129,7 +129,7 @@
 <ul><li>Order drones into battle</li>
 <li>Set great numbers in motion</li></ul>
 <h3 class="MonsterName">弗米蟻百夫長 (Formian Centurion)	<span class="Tags">成群, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Barbed spear (b[2d6]+2 傷害), 7 HP, 3 護甲</p>
+<p class="MonsterStats">Barbed spear (高[2d6]+2 傷害), 7 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Hive connection, Insectoid, Wings</p>
 <p class="MonsterDescription">Whether in the form of a legionnaire, part of the formian standing army, or as a praetorian guard to the queen, every formian hive contains a great number of these most dangerous insectoids. Darker in carapace, often scarred with furrows and the ceremonial markings that set them apart from their drones, the formian centurions are their fighting force and rightly so. Born, bred and living for the singular purpose of killing the enemies of their hive, they fight with one mind and a hundred swords. Thus far, the powers of Law have seen fit to spare mankind a great war with these creatures, but we’ve seen them in skirmish—descending sometimes on border towns with their wings flickering in the heat or spilling up from a sandy mound to wipe clean a newly-dug mine. Theirs is an orderly bloodshed, committed with no pleasure but the completion of a goal. <em>本能</em>: To fight as ordered</p>
@@ -159,7 +159,7 @@
 <ul><li>Pass on demonic influence</li>
 <li>Drive the pack into a fervor</li></ul>
 <h3 class="MonsterName">豺狼人菁英 (Gnoll Alpha)	<span class="Tags">單獨, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Sword (b[2d10] 傷害, 1 穿透), 12 HP, 2 護甲</p>
+<p class="MonsterStats">Sword (高[2d10] 傷害, 1 穿透), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Scent</p>
 <p class="MonsterDescription">Every pack has its top dog. Bigger, maybe—that’d be the simplest way. Often, though, with these lank and filthy mutts, it’s not about size or sharp teeth but about cruelty. About a willingness to kill your brothers and eat them while the pack watches. Willingness to desecrate the pack in a way that cows them to you. If they’re that awful to each other—to their living kin—think about how they must view us. It’s hard to be mere meat in a land of carnivores. <em>本能</em>: To drive the pack</p>
@@ -217,7 +217,7 @@
 <li>Melt into the shadows</li>
 <li>Cloak them in darkness</li></ul>
 <h3 class="MonsterName">獸人戰酋 (Orc Warchief)	<span class="Tags">單獨, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Iron Sword of Ages (b[2d10]+2 傷害), 16 HP, 0 護甲</p>
+<p class="MonsterStats">Iron Sword of Ages (高[2d10]+2 傷害), 16 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> One-Eye blessings, Shaman blessings, Divine protection from mortal harm</p>
 <p class="MonsterDescription">There are chiefs and there are leaders of the tribes among the orcs. There are those who rise to seize power and fall under the machinations of their foes. There is but one Warchief. One orc in all the horde who stands above the rest, bearing the blessings of the One-Eyes and the Shamans both. But one who walks with the elements under Night. But one who bears the Iron Sword of Ages and carries the ancient grudge against the civil races on his shoulders. The Warchief is to be respected, to be obeyed and above all else, to be feared. All glory to the Warchief. <em>本能</em>: To lead</p>
@@ -225,7 +225,7 @@
 <li>Make a show of power</li>
 <li>Enrage the tribes</li></ul>
 <h3 class="MonsterName">梭螺魚人間諜 (Triton Spy)	<span class="Tags">單獨, 隱匿, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Trident (w[2d10] 傷害), 12 HP, 2 護甲</p>
+<p class="MonsterStats">Trident (低[2d10] 傷害), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Aquatic</p>
 <p class="MonsterDescription">A fishing village caught one in their net, some time ago. Part a man and part some scaly sea creature, it spoke in a broken, spy-learned form of the common tongue before it suffocated in the open air. It told the fishermen of a coming tide, an inescapable swell of the power of some deep-sea god and that the triton empire would rise up and drag the land down into the ocean. The tale spread and now, when fishermen sail the choppy seas, they watch and worry that the dying triton’s tales were true. That there are powers deep below that watch and wait. They fear the tide is coming in. <em>本能</em>: To spy on the surface world</p>
@@ -240,7 +240,7 @@
 <li>Command beasts of the sea</li>
 <li>Reveal divine proclamation</li></ul>
 <h3 class="MonsterName">梭螺魚人潛海者 (Triton Sub-Mariner)	<span class="Tags">集團, 組織, 聰穎</span></h3>
-<p class="MonsterStats">Harpoon (b[2d8] 傷害), 6 HP, 3 護甲</p>
+<p class="MonsterStats">Harpoon (高[2d8] 傷害), 6 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程, 遠程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Aquatic</p>
 <p class="MonsterDescription">The triton are not a militant race by nature. They shy away from battle except when the sahuagin attack, and then they only defend themselves and retreat into the depths where their foes can’t follow. This trend begins to change. As the tidecallers come to rally their people, some triton men and women take up arms. They call these generals “sub-mariners” and build for them armor of shells and hardened glass. They swim in formation, wielding pikes and harpoons and attack the crews of ships that wander too far from port. Watch for their pennants of kelp on the horizon and the conch-cry of a call to battle and keep, if you can, your boats near shore. <em>本能</em>: To wage war</p>
