--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -114,11 +114,11 @@
              
 <h1>位面勢力</h1>
 <h3 class="MonsterName">天使 (Angel)	<span class="Tags">單獨, 駭人, 神聖, 聰穎, 組織</span></h3>
-<p class="MonsterStats">烈焰寶劍 (b[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
+<p class="MonsterStats">烈焰寶劍 (高[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 羽翼</p>
 <p class="MonsterDescription">
-	「經上這麼記載：天開了，一位天使從雲中出現，用阿芙拉瓦爾第一個女兒的樣貌對她說話──她是如此美麗，烏木般的肌膚，和黃金般的眼眸──當看見，阿芙拉瓦爾就流淚哭泣。『不要懼怕』，天使命令她：『妳要去我在夢中向妳顯現的村莊，向他們展現我在妳靈魂中寫下的字句。』阿芙拉瓦爾就再次哭泣，答應了祂，她拿起了她的寶劍和經書，往村莊那裡去。她的嘴唇有對鮮血的渴望，因為天使在阿芙拉瓦爾的靈魂中寫下的字句是『殺戮』。」 <em>本能</em>: 分享神的旨意</p>
+	「經上這樣記載：天開了，一位天使從雲中出現，用阿芙拉瓦爾第一個女兒的樣貌對她說話──她是如此美麗，烏木般的肌膚，和黃金般的眼眸──當看見，阿芙拉瓦爾就流淚哭泣。『不要懼怕』，天使命令她：『妳要去我在夢中向妳顯現的村莊，向他們展現我在妳靈魂中寫下的字句。』阿芙拉瓦爾就再次哭泣，答應了祂，她拿起了她的寶劍和經書，往村莊那裡去。她的嘴唇有對鮮血的渴望，因為天使在阿芙拉瓦爾的靈魂中寫下的字句是『殺戮』。」 <em>本能</em>: 分享神的旨意</p>
 <ul>
 	<li>傳達異象和預言</li>
 	<li>激發凡人們的行動</li>
@@ -135,32 +135,38 @@
 <h3 class="MonsterName">鏈魔 (Chain Devil)	<span class="Tags">單獨, 異位面</span></h3>
 <p class="MonsterStats">碾碎 (d10 傷害, 無視護甲), 12 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterDescription">Do you think the phrase “drag him to hell” means nothing? It is unfortunately literal, in the case of the chain devil. Appearing differently to each victim, this summoned creature has but a single purpose: to wrap its victim up in binding coils and take it away to a place of torment. Sometimes it will come as a man-shaped mass of rusting iron, hooks and coils of mismatched links. Other times, a roiling tangle of rope or kelp or twisted bloody bedsheets. The results are always the same. <em>本能</em>: To capture</p>
-<ul><li>Take a captive</li>
-<li>Return to whence it came</li>
-<li>Torture with glee</li></ul>
+<p class="MonsterDescription">
+	你認為「拖他下地獄」這句話是什麼意思？不幸的是，當遭遇到鏈魔時，這句話完全就是字面上的意思。在每個受害者眼中的外型皆有不同，這頭被召喚的怪物只有一個目的：將牠的受害者緊緊捆縛，然後把他拖到折磨酷刑之地。有時候，牠看起來像是一團由鏽鐵、彎鉤、和不相匹鏈圈連結而成的人形怪物。有些時候，牠看起來則像是一團翻滾糾纏的繩索、藻帶、或是扭曲血腥的床單。無論外型如何，最後的結果卻總是相同。 <em>本能</em>: 捕捉</p>
+<ul>
+	<li>捕捉一個俘虜</li>
+	<li>回到牠來的地方</li>
+	<li>帶著悅樂施行折磨</li></ul>
 <h3 class="MonsterName">概念元素 (Concept Elemental)	<span class="Tags">單獨, 狡猾, 異位面, 不定型</span></h3>
-<p class="MonsterQualities"><strong>特性:</strong> Ideal form</p>
-<p class="MonsterDescription">The planes are not as literal as our world. Clothed in the elemental chaos are places of stranger stuff than air and water. Here, rivers of time crash upon shores of crystal fear. Bleak storms of nightmare roil and churn in a laughter-bright sky. Sometimes, the spirits of these places can be lured into our world, though they are infinitely more unpredictable and strange than mere fire or earth might be. Easier to make mistakes, too—one might try calling up a wealth elemental and be surprised to find a murder elemental instead. <em>本能</em>: To perfect its concept</p>
-<ul><li>Demonstrate its concept in its purest form</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 理想型態</p>
+<p class="MonsterDescription">
+	這些位面並不如我們的世界那般刻板尋常。被元素混沌所覆蓋，這裡盡是些比大氣和水更加怪異奇妙的地方。在這裡，時間之河沖刷撞擊著懼晶之岸，淒涼的噩夢風暴咆哮，在歡愉笑聲的蒼空中顫動。有時候，這些地方的精魂可以被引誘到我們的世界來，儘管它們比單純的土元素或火元素還要來得更加奇詭、不可預知，也更容易出錯──有些人可能會試著召喚財富之元素，卻驚訝地發現自己召喚出了一只代表謀殺的元素出來。 <em>本能</em>: 完善它的概念</p>
+<ul>
+	<li>以它最純粹的型態展現它的概念</li></ul>
 <h3 class="MonsterName">腐化者 (Corrupter)	<span class="Tags">單獨, 狡猾, 異位面, 囤財者</span></h3>
-<p class="MonsterStats">Secret dagger (w[2d8] 傷害), 12 HP, 0 護甲</p>
+<p class="MonsterStats">密藏匕首 (低[2d8] 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">“Surely, my good man, you must know why I am here. Must know who I am. You said the words. You spilled the blood and followed the instructions almost to the letter. Your pronunciation was a bit off but that’s to be expected. I’ve come to give you what you’ve always wanted, friend. Glory, love, money? Paltry things when you’ve the vaults of hell to plumb. Don’t look so shocked, you knew what this was. You have but one thing we desire. Promise it to us, and the world shall be yours for the taking. Trust me.” <em>本能</em>: To bargain</p>
-<ul><li>Offer a deal with horrible consequences</li>
-<li>Plumb the vaults of hell for a bargaining chip</li>
-<li>Make a show of power</li></ul>
+<p class="MonsterDescription">
+	「當然，我的好兄弟，你肯定明白我為什麼會在這裡。你唸出了咒語，你揮灑了鮮血，而且幾乎嚴格地按照所有指示操作。你的發音是有點不標準，但這還在意料之中。我來是為了給你那些你一直渴望的，我的朋友。榮耀、愛情、財富？哈，當你來到地獄寶庫探索時，那都不過是些微不足道的瑣碎之物。別看起來像是被嚇到一樣，你清楚知道這是怎麼回事。你擁有的只有那一樣是我們想要的。把它承諾給我們，這個世界就會是你的……相信我。」 <em>本能</em>: 議價</p>
+<ul>
+	<li>提供一筆有著可怕後果的交易</li>
+	<li>探究地獄寶庫以提供議價的籌碼</li>
+	<li>展現力量</li></ul>
 <h3 class="MonsterName">巨靈 (Djinn)	<span class="Tags">集團, 大型, 魔法</span></h3>
-<p class="MonsterStats">Flame (d8+1 傷害, 無視護甲), 14 HP, 4 護甲</p>
+<p class="MonsterStats">烈焰 (d8+1 傷害, 無視護甲), 14 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Made of flame</p>
+<p class="MonsterQualities"><strong>特性:</strong> 由烈焰構成</p>
 <p class="MonsterDescription">“Stop rubbing that lamp, you idiot. I do not care what you have read, it will not grant you wishes. I brought you here to show you something real, something true. See this mural? It shows the ancient city. The true city that came before. They called it Majilis and it was made of brass by the spirits. They had golem servants and human lovers and, in that day, it was said you could trade them a year of your life for a favor. We are not here to gather treasure this night, fool, we are here to learn. The djinn still sometimes come to these places, and you must understand their history if you are to know how to behave. They are powerful and wicked and proud and you must know them if you hope to survive a summoning. Now, bring the lamp here and we will light it, it grows dark and these ruins are dangerous at night.” <em>本能</em>: To burn eternally</p>
 <ul><li>Grant power for a price</li>
 <li>Summon the forces of the City of Brass</li></ul>
 <h3 class="MonsterName">地獄獵犬 (Hell Hound)	<span class="Tags">集團, 異位面, 組織</span></h3>
-<p class="MonsterStats">Fiery Bite (d8 傷害), 10 HP, 1 護甲</p>
+<p class="MonsterStats">熾焰啃咬 (d8 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Hide of shadow</p>
+<p class="MonsterQualities"><strong>特性:</strong> 藏於陰影</p>
 <p class="MonsterDescription">When one reneges on a deal, does not the debtor come for payment? Does the owed party not send someone to collect what is due? So too with the Powers Below. They only want what is theirs. A howling pack of shadows, flame and jagged bone, driven by the hunting horn. They will not cease, they cannot be evaded. <em>本能</em>: To pursue</p>
 <ul><li>Follow despite all obstacles</li>
 <li>Spew fire</li>
@@ -174,27 +180,27 @@
 <h3 class="MonsterName">Inevitable	<span class="Tags">集團, 大型, 魔法, 謹慎, 不定型, 異位面</span></h3>
 <p class="MonsterStats">Hammer (d10+1 傷害), 21 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Made of Order</p>
+<p class="MonsterQualities"><strong>特性:</strong> 由秩序構成</p>
 <p class="MonsterDescription">All things come to an end. Reality bleeds from the cut of entropy’s knife. At the edge of time itself stand the inevitable. Massive, powerful and seemingly carved from star-stuff themselves, the inevitable intervene only where magic or calamity have undone the skein of fate. Where the arrogant and powerful boil the substance of destiny away and seek to undermine the very laws of reality, the inevitable arrive to guide things back to the proper order. Unshakable, seemingly immune to mortal harm and utterly enigmatic, it is said that the Inevitable are all that will remain when time’s long thread has run out. <em>本能</em>: To preserve order</p>
 <ul><li>End a spell or effect</li>
 <li>Enforce a law of nature or man</li>
 <li>Give a glimpse of destiny</li></ul>
 <h3 class="MonsterName">墮魂蟲 (Larvae)	<span class="Tags">成群, 狡猾, 異位面, 聰穎</span></h3>
-<p class="MonsterStats">Slime (w[2d4] 傷害), 10 HP, 0 護甲</p>
+<p class="MonsterStats">Slime (低[2d4] 傷害), 10 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">Those who have seen visions of the Planes Below, and survived with their sanity intact, speak of masses of these writhing wretches. Maggots with the faces of men and women, crying out for salvation in a nest of flames. Sometimes, they can be goaded out through a rip in the planar caul and emerge, wriggling and in torment, into our world. Once here, they spread misery and sickness during their mayfly lives before expiring into a slurry of gore. All in all, an enticement to do good deeds in life. <em>本能</em>: To suffer</p>
 <ul><li>Fill them with despair</li>
 <li>Beg for mercy</li>
 <li>Draw evil attention</li></ul>
 <h3 class="MonsterName">夢魘 (Nightmare)	<span class="Tags">成群, 大型, 魔法, 駭人, 異位面</span></h3>
-<p class="MonsterStats">Trample (d6+1 傷害), 7 HP, 4 護甲</p>
+<p class="MonsterStats">踐踏 (d6+1 傷害), 7 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Flame and shadow</p>
+<p class="MonsterQualities"><strong>特性:</strong> 烈焰和陰影</p>
 <p class="MonsterDescription">The herd came from a pact made in the days when folk still inhabited the Blasted Steppes. Horselords, they were, who travelled those lands. Born in the saddle, it was said. One of theirs, in a bid to dominate his peers, made a black pact with some fell power and traded away his finest horses. He had some power, sure—but what’s a thousand year dynasty when a life is so short? Now the fiends of the pit ride on the finest horses ever seen. Coats of shining oil and manes of tormented flame: these are steeds of hell’s cavalry. <em>本能</em>: To ride rampant</p>
 <ul><li>Sheath a rider in hellish flame</li>
 <li>Drive them away</li></ul>
 <h3 class="MonsterName">夸塞魔 (Quasit)	<span class="Tags">成群, 異位面</span></h3>
-<p class="MonsterStats">Hellish weaponry (d6 傷害), 7 HP, 2 護甲</p>
+<p class="MonsterStats">地獄武器 (d6 傷害), 7 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Adaptable form</p>
 <p class="MonsterDescription">An imp with some ambition. A quasit is a kind of foot soldier in the demon realm. A commoner, armed with fangs or claws or wings or some other thing to give it just a little edge over its hellish peers. Commonly bound by warlocks to carry heavy loads or build bridges or guard their twisted towers, a quasit can take on many forms, none of them pleasant. <em>本能</em>: To serve</p>
